# mipt-cpp-dsa

./: .gitignore  CMakeLists.txt  README.md
2023-09-16_introduction/: c--next-and-previous.cpp  d--mrr.cpp  e--sum-of-digits.cpp  l--angular-number.cpp
2023-09-23_operators/: a--maximum-of-three-numbers.cpp  i--nth-number-fibonacchi.cpp
2023-09-30_arrays-pointers-binsearch-gcd/: g--binary-search.cpp  h--gcd-and-lcm.cpp
2023-10-07_function-references-and-simple-sorting/: j--bubble-sort--numbers-of-exchanges.cpp  k--expedition.cpp  l--discounts.cpp  m--necklace.cpp  n--the-lot-of-krizhanovsky.cpp
2023-10-14_recursion-merge-and-mergesort/: a--addition-without-addition.cpp  b--no-arrays.cpp  e--sequence.cpp  f--merge-sort.cpp
additional-tasks/: b--rsq.cpp
credit-contest/: a--scd.cpp  b--fib-cci.cpp  e--brackets.cpp  o--description.md
exam-cpp/: README.md
exam/answers/: 06.md
semester-1/: CMakeLists.txt
semester-1/additional-tasks/: a--rmq.cpp  c--sparce-tables.cpp
semester-1/credit-contest/: c--binsrch.cpp  d--smartsort.cpp  f--heap.cpp  g--tree.cpp  h--lnis.cpp
semester-1/exam/: questions.md  readme.md
semester-1/exam/answers/: 01.md  3.md  (+25 more)
semester-1/week-01--introduction/: b--hypotenuse.cpp  f--next-even.cpp  g--electronic-clock.cpp  h--the-difference-in-times.cpp  i--snail.cpp  j--check-divisibility.cpp  m--the-leap-year.cpp
semester-1/week-02--operators/: b--chocolate.cpp  c--a-complex-equation.cpp  d--even-numbers.cpp  e--the-minimum-divider.cpp  f--the-sum-of-numbers.cpp  g--the-second-maximum-2.cpp  h--the-sum-of-the-numbers-of-the-number.cpp  j--cutting-into-squares.cpp  l--side-diagonal.cpp  m--filling-with-diagonals.cpp
semester-2/: CMakeLists.txt
semester-2/exam-cpp/: README.md
semester-2/week-01/: README.md
semester-2/week-02/: README.md  a.cpp  d.cpp
semester-2/week-03/: README.md  c.cpp
semester-2/week-04/: README.md
semester-2/week-05/: b.cpp  c.cpp
semester-2/week-06/: ford-bellman.cpp
semester-2/week-07/: README.md
semester-2/week-08/: README.md  geometry.cpp
semester-2/week-09/: a.cpp
semester-2/week-1/: a.cpp  c.cpp
semester-2/week-10/: README.md  a.cpp  c.cpp
semester-2/week-11/: README.md  m.cpp
semester-2/week-12/: README.md
semester-2/week-13/: README.md  a.cpp  b.cpp  c.cpp
semester-2/week-14/: README.md
semester-2/week-2/: a.cpp  b.cpp  c.cpp  d.cpp  vector.cpp
semester-2/week-3/: a.cpp  main.cpp
semester-2/week-4/: b.cpp  main.cpp
semester-2/week-5/: README.md  a.cpp
semester-2/week-6/: README.md
semester-2/week-7/: b.cpp  c.cpp  e.cpp
semester-2/week-8/: c.cpp
week-01--introduction/: a--hello-world.cpp  k--maximum-of-two-numbers.cpp
week-02--operators/: k--reducing-the-fractions.cpp
week-04--function-references-and-simple-sorting/: k--expedition.cpp
week-06--quicksort/: week-6.md
week-07--heapsort-and-countingsort/: a--heap.cpp
week-08--dynamic-programming/: b--stones.cpp  c--buying-tickets.cpp
week-09--lists/: b--simple-queue.cpp  main.cpp
week-1/: README.md  a.cpp  b.cpp  c.cpp
week-10--bst/: a--count-elements.cpp  b--traversing.cpp  c--balance.cpp  d--output-branches.cpp  e--frequency-of-occurrence-of-elements.cpp
week-11--cstring-and-treep/: b--traversing.cpp  c--cartesian-search-tree.cpp  cstring.cpp  cstring.h  main.cpp
week-12--avl-tree/: a--count-elements.cpp  b--traversing.cpp  c--balance.cpp  d--output-branches.cpp  e--frequency-of-occurrence-of-elements.cpp  main.cpp
week-13/: h.cpp
week-13--gcs-lis/: a--harry-potter-and-the-gcs.cpp  b--harry-potter-and-the-lis.cpp  c--harry-potter-and-the-fast-lis.cpp
week-14--rmq-lca/: a--kopatych-and-the-art-of-light-touches.cpp  main.cpp
week-2/: c.cpp
week-3/: a.cpp  b.cpp  c.cpp  d.cpp  main.cpp
week-4/: README.md  a.cpp  b.cpp  main.cpp
week-4--function-references-and-simple-sorting/: f--selection-sort.cpp  m--necklace.cpp
week-4_function-references-and-simple-sorting/: m--necklace.cpp
week-5/: a.cpp  c.cpp
week-5--recursion-merge-and-mergesort/: e--sequence.cpp
week-5_recursion-merge-and-mergesort/: c--fast-degree-expansion.cpp  d--number-of-calls-of-the-fibonacci-function.cpp
week-6/: README.md  floyd-warshell.cpp  main.cpp
week-6--quicksort/: a--quick-sort-and-quote-from-dead-souls.cpp  b--applicants.cpp  d--chimneysweep.cpp  week-6.md
week-7/: a.cpp  c.cpp  d.cpp
week-7--heap-and-heapsort/: a--heap.cpp  d--counting-sort.cpp  main.cpp  week-7.md
week-7--heapsort-and-countingsort/: a--heap.cpp  b--heapsort.cpp  c--priority-queue.cpp
week-8/: d.cpp
week-8--dynamic-programming/: a--nth-number-fibonacci.cpp  b--stones.cpp  c--buying-tickets.cpp  d--atm.cpp  e--compare-regexp.cpp  f--optimal-theft.cpp  g--the-backpack-problem.cpp
week-9/: README.md
week-9--lists/: a--simple-stack.cpp  b--simple-queue.cpp  c--remove-brackets.cpp  d--containers.cpp
(+55 files in other folders)
