cmake_minimum_required(VERSION 3.26)
project(susu_mipt_cpp)

set(CMAKE_CXX_STANDARD 17)


# [week-1]
#add_executable(susu_mipt_cpp week-1/a.cpp)
#add_executable(susu_mipt_cpp week-1/b.cpp)
#add_executable(susu_mipt_cpp week-1/c.cpp)

# [week-2]
#add_executable(susu_mipt_cpp week-2/a.cpp)
#add_executable(susu_mipt_cpp week-2/b.cpp)
#add_executable(susu_mipt_cpp week-2/c.cpp)
#add_executable(susu_mipt_cpp week-2/d.cpp)

# [week-3]
#add_executable(susu_mipt_cpp week-3/a.cpp)
#add_executable(susu_mipt_cpp week-3/b.cpp)
#add_executable(susu_mipt_cpp week-3/c.cpp)
#add_executable(susu_mipt_cpp week-3/d.cpp)

# [week-4]
#add_executable(susu_mipt_cpp week-4/main.cpp)
add_executable(susu_mipt_cpp week-4/b.cpp)

# [week-5]
#add_executable(susu_mipt_cpp week-5/a.cpp)
#add_executable(susu_mipt_cpp week-5/c.cpp)