cmake_minimum_required(VERSION 3.26)
project(susu_mipt_cpp)

set(CMAKE_CXX_STANDARD 17)


# [week-1]
#add_executable(susu_mipt_cpp week-1/a.cpp)
#add_executable(susu_mipt_cpp week-1/b.cpp)
#add_executable(susu_mipt_cpp week-1/c.cpp)

# [week-2]
#add_executable(susu_mipt_cpp week-2/a.cpp)
#add_executable(susu_mipt_cpp week-2/b.cpp)
#add_executable(susu_mipt_cpp week-2/c.cpp)
#add_executable(susu_mipt_cpp week-2/d.cpp)

# [week-3]
#add_executable(susu_mipt_cpp week-3/a.cpp)
#add_executable(susu_mipt_cpp week-3/b.cpp)
#add_executable(susu_mipt_cpp week-3/c.cpp)
#add_executable(susu_mipt_cpp week-3/d.cpp)

# [week-4]
#add_executable(susu_mipt_cpp week-4/main.cpp)
#add_executable(susu_mipt_cpp week-4/a.cpp)
#add_executable(susu_mipt_cpp week-4/b.cpp)

# [week-5]
#add_executable(susu_mipt_cpp week-5/a.cpp)
#add_executable(susu_mipt_cpp week-5/b.cpp)
#add_executable(susu_mipt_cpp week-5/c.cpp)

# [week-7]
#add_executable(susu_mipt_cpp week-7/a.cpp)
#add_executable(susu_mipt_cpp week-7/b.cpp)
#add_executable(susu_mipt_cpp week-7/c.cpp)
#add_executable(susu_mipt_cpp week-7/d.cpp)

# [week-8]
#add_executable(susu_mipt_cpp week-8/c.cpp)
#add_executable(susu_mipt_cpp week-8/d.cpp)
#add_executable(susu_mipt_cpp week-8/geometry.cpp)

# [week-9]
#add_executable(susu_mipt_cpp week-9/a.cpp)

# [week-10]

# [week-11]

# [week-12]
#add_executable(susu_mipt_cpp week-12/m.cpp)

# [week-13]
#add_executable(susu_mipt_cpp week-13/a.cpp)
#add_executable(susu_mipt_cpp week-13/b.cpp)
#add_executable(susu_mipt_cpp week-13/h.cpp)

# [week-14]
