cmake_minimum_required(VERSION 3.26)
project(susu_mipt_cpp)

set(CMAKE_CXX_STANDARD 17)


# [week-1]
#add_executable(susu_mipt_cpp week-01/a.cpp)
#add_executable(susu_mipt_cpp week-01/b.cpp)
#add_executable(susu_mipt_cpp week-01/c.cpp)

# [week-2]
#add_executable(susu_mipt_cpp week-02/a.cpp)
#add_executable(susu_mipt_cpp week-02/b.cpp)
#add_executable(susu_mipt_cpp week-02/c.cpp)
#add_executable(susu_mipt_cpp week-02/d.cpp)

# [week-3]
#add_executable(susu_mipt_cpp week-03/a.cpp)
#add_executable(susu_mipt_cpp week-03/b.cpp)
#add_executable(susu_mipt_cpp week-03/c.cpp)
#add_executable(susu_mipt_cpp week-03/d.cpp)

# [week-4]
#add_executable(susu_mipt_cpp week-04/main.cpp)
#add_executable(susu_mipt_cpp week-04/a.cpp)
#add_executable(susu_mipt_cpp week-04/b.cpp)

# [week-5]
#add_executable(susu_mipt_cpp week-05/a.cpp)
#add_executable(susu_mipt_cpp week-05/b.cpp)
#add_executable(susu_mipt_cpp week-05/c.cpp)

# [week-7]
#add_executable(susu_mipt_cpp week-07/a.cpp)
#add_executable(susu_mipt_cpp week-07/b.cpp)
#add_executable(susu_mipt_cpp week-07/c.cpp)
#add_executable(susu_mipt_cpp week-07/d.cpp)

# [week-8]
#add_executable(susu_mipt_cpp week-08/c.cpp)
#add_executable(susu_mipt_cpp week-08/d.cpp)
#add_executable(susu_mipt_cpp week-08/geometry.cpp)

# [week-9]
#add_executable(susu_mipt_cpp week-09/a.cpp)

# [week-10]

# [week-11]

# [week-12]
#add_executable(susu_mipt_cpp week-12/m.cpp)

# [week-13]
#add_executable(susu_mipt_cpp week-13/a.cpp)
#add_executable(susu_mipt_cpp week-13/b.cpp)
#add_executable(susu_mipt_cpp week-13/h.cpp)

# [week-14]
